MDEV-20783 INET6 cannot be converted to BINARY(16)